FC - 2023-11-09 Loguin basico
