# src/app/api/models.ts
@@ -1,4 +1,5 @@
 /* tslint:disable */
 /* eslint-disable */
+export { EventDto } from './models/event-dto';
 export { LoginDto } from './models/login-dto';
 export { UserDto } from './models/user-dto';
