# src/app/api/models/event-dto.ts
@@ -1,0 +1,15 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface EventDto {
+  activityId?: number;
+  activityName?: null | string;
+  city?: null | string;
+  countryId?: null | number;
+  countryName?: null | string;
+  dateTime?: null | string;
+  difficultyLevelId?: number;
+  difficultyName?: null | string;
+  eventDescription?: null | string;
+  eventId?: number;
+  eventName?: null | string;
+}
