# src/app/api/services.ts
@@ -1,2 +1,3 @@
 export { EventService } from './services/event.service';
+export { EventsCommentService } from './services/events-comment.service';
 export { UserService } from './services/user.service';
